# AndroidSync

./: .gitignore  pyproject.toml  script.py  setup.cfg
src/androidsync/: __init__.py
