[project]
name = "androidsync"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tqdm>=4.67.1",
]

[project.scripts]
main = "androidsync:main"

[build-system]
requires = [ "setuptools" ]

[tool.uv]
managed = true
default-groups = "all"
cache-keys = [
    { file = "pyproject.toml" },
]
compile-bytecode = true

[tool.mypy]
color_output = true
explicit_package_bases = true
force_uppercase_builtins = true
ignore_missing_imports = true
pretty = true
show_column_numbers = true
show_error_context = true

[dependency-groups]
dev = [
    {include-group = "lint"},
    {include-group = "type-checking"},
]
lint = [
    "pyls-memestra",
    "pylsp-mypy",
    "pylsp-rope",
    "python-lsp-black",
    "python-lsp-isort",
    "python-lsp-ruff",
    "python-lsp-server[all]",
]
type-checking = [
    "mypy",
]
